--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,22 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut itaque, voluptas doloribus tenetur dolore sapiente deserunt? Id quibusdam ullam quis numquam? Labore, quidem at delectus doloremque incidunt nisi eos amet!
-        
+    <nav>
+        <a href="#">Home</a>
+        <a href="#">Services</a>
+        <a href="#">About us</a>
+        <a href="#"> Contact Us</a>
+    </nav>
+    <p>Lorem ipsum dolor sit amet consectetur
+         adipisicing elit. Ut itaque, voluptas
+          doloribus tenetur dolore sapiente
+           deserunt? Id quibusdam ullam quis 
+           numquam? Labore, quidem at delectus 
+           doloremque incidunt nisi eos amet!
+
     </p>
+    <button class="btn btn-primary">Button</button>
+    <button class="btn btn-success">Button</button>
+    <button class="btn btn-danger">Button</button>
 </body>
 </html>
