--- a/src/index.html
+++ b/src/index.html
@@ -31,5 +31,17 @@
     <button class="btn btn-primary">Button</button>
     <button class="btn btn-success">Button</button>
     <button class="btn btn-danger">Button</button>
+
+    <p class="text-danger bg-warning"> Lorem ipsum dolor sit amet.</p>
+    <p class="text-danger-light-1 bg-warning-light-1"> Lorem ipsum dolor sit amet.</p>
+    <p class="text-danger-light-2 bg-warning-light-2"> Lorem ipsum dolor sit amet.</p>
+    <p class="text-danger-light-3 bg-warning-light-3"> Lorem ipsum dolor sit amet.</p>
+
+
+    <p class="text-danger bg-warning"> Lorem ipsum dolor sit amet.</p>
+    <p class="text-danger-light-1 bg-warning-dark-1"> Lorem ipsum dolor sit amet.</p>
+    <p class="text-danger-light-2 bg-warning-dark-2"> Lorem ipsum dolor sit amet.</p>
+    <p class="text-danger-light-3 bg-warning-dark-3"> Lorem ipsum dolor sit amet.</p>
+
 </body>
 </html>
