--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,9 @@
     <button class="btn btn-success">Button</button>
     <button class="btn btn-danger">Button</button>
 
+    <div class="d1">
+        Lorem ipsum dolor sit amet.
+    </div>
     <p class="text-danger bg-warning"> Lorem ipsum dolor sit amet.</p>
     <p class="text-danger-light-1 bg-warning-light-1"> Lorem ipsum dolor sit amet.</p>
     <p class="text-danger-light-2 bg-warning-light-2"> Lorem ipsum dolor sit amet.</p>
