--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,9 @@
     <button class="btn btn-danger">Button</button>
 
     <div class="d1">
-        Lorem ipsum dolor sit amet.
+        <h1 class="title">Lorem ipsum dolor sit amet.</h1>
+        <p class="para">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis amet tempore ratione. Repellat, illum quidem.
+        </p>
     </div>
     <p class="text-danger bg-warning"> Lorem ipsum dolor sit amet.</p>
     <p class="text-danger-light-1 bg-warning-light-1"> Lorem ipsum dolor sit amet.</p>
